# e-commerce-website

./: .gitignore  README.md  acc.html  base.css  base.html  cart.html  classes.py  login.html  main.html  main.js  main.py  manageorders.html  package-lock.json  payment.html  products.html  pyproject.toml  renprod.html  signup.html  single_pro.html  singleorder.html  users.json
static/: account.css  base.css  cart.css  main.css  main.js  main.scss  pro_des.css  product.css
website-menu-01/: index.html
website-menu-01/css/: style.css
