[tool.poetry]
name = "repl_python3_e-commercewebsite"
version = "0.1.0"
description = ""
authors = ["FoundingTitan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
